# MgrSem2

AR/LAB02/: CMakeLists.txt  main.c  run.sh  sieve.c  sieve.h
AR/LAB02_rs/: Cargo.toml  run.sh
AR/LAB02_rs/src/: main.rs  sieve.rs
AR/LAB03_rs/: Cargo.toml  README.md  plotter.py  run.sh  test_eq.py
AR/LAB03_rs/results/: configs.txt  result_01.npy  result_02.npy
AR/LAB03_rs/src/: main.rs  util.rs
AR/LAB05/: eval.py  julia.py  run.sh
CV/: requirements.txt
CV/Lab01/: kerasAPI_demo_1.py  kerasAPI_demo_2.py  load_disp_img.py  load_disp_img_2.py  load_disp_img_3.py  matplotlib_demo_1.py  matplotlib_demo_2.py  matplotlib_demo_3.py  pil_demo.py  pil_demo_2.py  pil_demo_3.py  pil_demo_4.py  skimage_demo.py
CV/Lab01/Demo_face_det/: face_detect.py
CV/Lab04/: LAB.md  Transfer_Learning.py  util.py
CV/Lab05/: Object_annotation.py  app.py  drag_and_move_rectangle.py  img.py
CV/Lab05_qt/labeler/: form.ui  gazela.txt  image_view.py  image_viewer.ui  img.txt  rect.py  (+4 more)
CV/Lab06/: HAR_LSTM.py  models.py  normalization.py
GG/lab01/: solutions.md
IWiSUM/Lab01/: auto.arff  auto_out.arff  data.csv  data_10cols.csv  gen.py  result.txt
IWiSUM/Lab04/: balance.py  balance_new.py  balance_q.py  balance_sarsa.py  plot.py
NLP/: NLP_lab07.ipynb  lab01.py  lab02.py  lab03.py  lab04.py  lab06.py  lab07.py  lab08.py  lab09.py  requirements.txt  requirements_venv2.txt
NLP/data_lab07/: ds1_test.txt  ds1_train.txt  ds2_test.txt  ds2_train.txt
NLP/util/: __init__.py  elastic.py  files.py  plot.py
RCR/OpenGL14/: Lab04_code_patch.patch  model.cpp  model.h  widgetopengl.cpp
(+106 files in other folders)
