[package]
name = "LAB03_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.6.0", features = ["derive"] }
rand = "0.8.5"
clap =  { version = "4.0.18", features = ["derive"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.6"